--- a/src/App.css
+++ b/src/App.css
@@ -110,9 +110,12 @@ section {
   display: block;
 }
 
-/* Force scrollbar */
 html {
-  overflow-y: scroll;
+  overflow-y: auto; /* Show scrollbar only when necessary */
+}
+
+body {
+  overflow-x: hidden; /* Remove horizontal scrollbars */
 }
 
 /* Align radios and text inputs with their label */
@@ -181,6 +184,7 @@ body {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
   font-family: "Rubik", sans-serif;
+  margin: 0;
 }
 
 a {
